# gnocchi

./: .gitignore  .gitreview  .mailmap  .mergify.yml  .stestr.conf  .testr.conf  .travis.yml  7bcd2a25.diff  MANIFEST.in  README.rst  bindep.txt  generate-config-file.sh  groups  openstack-common.conf  project.config  pyproject.toml  requirements-py3.txt  requirements.txt  run-func-tests.sh  run-mysql-tests.sh  run-postgresql-tests.sh  run-tests.sh  run-upgrade-tests.sh  setup-influxdb-tests.sh  setup-mysql-tests.sh  setup-postgresql-tests.sh  setup-test-env.sh  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  test.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/actions/gnocchi-container/: Dockerfile  action.yml
.github/workflows/: gnocchi-ci-image.yml  gnocchi.yml
composes/: Dockerfile  gnocchi.conf  gnocchi.yml  mysql-indexer.yml  postgresql-indexer.yml  redis-coordinator.yml
devstack/: README.rst  apache-gnocchi.template  apache-ported-gnocchi.template  plugin.sh  settings
devstack/gate/: gate_hook.sh  post_test_hook.sh
doc/source/: alternatives.rst  amqp1d.rst  architecture.rst  basic.rst  client.rst  collectd.rst  comparison-table.rst  conf.py  configuration.rst  contributing.rst  devstack.rst  glossary.rst  grafana.rst  index.rst  influxdb.rst  install.rst  intro.rst  nagios.rst  operating.rst  pex.rst.j2  prometheus.rst  resource_types.rst  rest.j2  rest.rst  rest.yaml  running.rst  statsd.j2  statsd.rst
doc/source/include/: term-substitution.rst
doc/source/releasenotes/: 2.1.rst  2.2.rst  3.0.rst  3.1.rst  4.0.rst  4.1.rst  4.2.rst  4.3.rst  4.4.rst  4.5.rst  4.6.rst  4.7.rst  index.rst
etc/gnocchi/: api-paste.ini  gnocchi-config-generator.conf  policy.json
gnocchi/: __init__.py  aggregation.py  amqp1d.py  archive_policy.py  calendar.py  carbonara.py  chef.py  cli.py  exceptions.py  genconfig.py  gendoc.py  gnocchi-config-generator.conf  gnocchi-policy-generator.conf  json.py  opts.py  pex.py  resource_type.py  service.py  setuptools.py  statsd.py  status.py  utils.py
gnocchi-build/: pyproject.toml
gnocchi/aggregates/: __init__.py  moving_stats.py
gnocchi/ceilometer/: alarm_api.py  alarm_evaluator.py  dispatcher.py  utils.py
gnocchi/ceilometer/resources/: base.py  ceph_account.py  identity.py  image.py  instance.py  ipmi.py  network.py  orchestration.py  swift_account.py  volume.py
gnocchi/cli/: amqp1d.py  api.py  injector.py  manage.py  metricd.py  statsd.py
gnocchi/common/: ceph.py  file.py  redis.py  s3.py  sqlalchemy.py  swift.py
gnocchi/deprecated_aggregates/: __init__.py  moving_stats.py
gnocchi/incoming/: __init__.py  _carbonara.py  ceph.py  file.py  redis.py  s3.py  swift.py
gnocchi/indexer/: __init__.py  null.py  sqlalchemy.py  sqlalchemy_base.py  sqlalchemy_extension.py  sqlalchemy_legacy_resources.py  sqlalchemy_types.py
gnocchi/indexer/alembic/: env.py  (+2 more)
gnocchi/notifier/: __init__.py  redis.py
gnocchi/rest/: __init__.py  api-paste.ini  api.py  app.py  app.wsgi  auth_helper.py  cross_metric.py  exceptions.py  gnocchi-api  http_proxy_to_wsgi.py  influxdb.py  metric.py  policies.py  policy.json  policy.yaml  transformation.py  wsgi.py
gnocchi/storage/: __init__.py  _carbonara.py  ceph.py  file.py  influxdb.py  null.py  redis.py  rocksdb.py  s3.py  swift.py
gnocchi/tempest/: config.py  plugin.py
gnocchi/tests/: __init__.py  api-paste.ini  base.py  test_aggregates.py  test_amqp1d.py  test_archive_policy.py  test_bin.py  test_calendar.py  test_carbonara.py  test_ceilometer_alarm.py  test_ceilometer_dispatcher.py  test_chef.py  test_cross_metric.py  test_deprecated_aggregates.py  test_incoming.py  test_indexer.py  test_influxdb.py  test_injector.py  test_measures_grouper.py  test_rest.py  test_statsd.py  test_storage.py  test_transformation.py  test_utils.py  utils.py
gnocchi/wsgi/: api.py
images/: Dockerfile.ci  entrypoint.sh.ci
logo/: gnocchi-bw.eps  gnocchi-icon.eps  gnocchi.eps
perf/: micro-checks.py  micro-metricd.py  micro-metricd.py.cprof  run.sh
releasenotes/notes/: add-max-operator-f8db732370969797.yaml  add-paramter-granularity-7f22c677dc1b1238.yaml  add-rateofchangesec-operator-a24327764a6cb18d.yaml  add_update_archive_policy_rule-c2ac6b989a3138db.yaml  aggregates-API-d31db66e674cbf60.yaml  aggregates-api-output-change-2bc6620c7f595925.yaml  aggregates-metric-wildcard-d489260c685c5727.yaml  aggregates-no-metric-9be5a8894bad09ee.yaml  aggregates-rateofchange-94785a381b7bc3b5.yaml  amqp1-driver-78a9401768df7367.yaml  ap-in-batch-d83f6aa163d200e9.yaml  api-user-input-invalid-09b045f5ab12c.yaml  archive_policy_bool-9313cae7122c4a2f.yaml  auth_type_option-c335b219afba5569.yaml  auth_type_pluggable-76a3c73cac8eec6a.yaml  backfill-cross-aggregation-2de54c7c30b2eb67.yaml  batch_resource_measures_create_metrics-f73790a8475ad628.yaml  bulk-metric-get-e2b298478b679087.yaml  calendar-groups-1336b6d097c01b64.yaml  carbonara-truncate-timespan-3694b96449709083.yaml  ceph-omap-34e069dfb3df764d.yaml  ceph-read-async-ca2f7512c6842adb.yaml  change-file-driver-layout-41c7a458160c4cb7.yaml  configurable_clenaup_batch_size-a785c1aa6ee29058.yaml  creator_field-6b715c917f6afc93.yaml  datetime-resource-attribute-type-1e627a686568f72a.yaml  delete-resources-f10d21fc02f53f16.yaml  deprecate-moving-average-a7596a0009be5b12.yaml  deprecate-noauth-01b7e961d9a17e9e.yaml  dynamic-resampling-b5e545b1485c152f.yaml  fill=dropna-9e055895e7bff778.yaml  filter-param-for-aggregation-f68c47c59ca81dc0.yaml  fnmatch-python-2.7-c524ce1e1b238b0a.yaml  forbid-slash-b3ec2bc77cc34b49.yaml  gnocchi-api-uwsgi-f16d958cb26ad90e.yaml  gnocchi_config_generator-0fc337ba8e3afd5f.yaml  healthcheck-middleware-81c2f0d02ebdb5cc.yaml  incoming-sacks-413f4818882ab83d.yaml  influxdb-endpoint-13cbd82cf287d91c.yaml  injector-af9e68fdfe02d322.yaml  (+48 more)
releasenotes/source/: conf.py  index.rst
tools/: build_pex.sh  duration_perf_analyse.py  duration_perf_test.py  gnocchi-archive-policy-size.py  install_deps.sh  measures_injector.py  pretty_tox.sh  travis-ci-setup.dockerfile  validate_docs.sh
tools/config/: check_uptodate.sh  generate_sample.sh
(+180 files in other folders)
