[metadata]
name = gnocchi
url = http://launchpad.net/gnocchi
summary = Metric as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://gnocchi.xyz
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[extras]
keystone =
    keystonemiddleware>=4.0.0
mysql =
    pymysql
    oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
    sqlalchemy
    sqlalchemy-utils
    alembic>=0.7.6,!=0.8.1,!=0.9.0
postgresql =
    psycopg2
    oslo.db>=4.8.0,!=4.13.1,!=4.13.2,!=4.15.0
    sqlalchemy
    sqlalchemy-utils
    alembic>=0.7.6,!=0.8.1,!=0.9.0
s3 =
    boto3
    botocore>=1.5
    lz4>=0.9.0
    tooz>=1.38
redis =
    redis>=2.10.0 # MIT
    lz4>=0.9.0
    tooz>=1.38
swift =
    python-swiftclient>=3.1.0
    lz4>=0.9.0
    tooz>=1.38
ceph =
    lz4>=0.9.0
    tooz>=1.38
ceph_recommended_lib =
    cradox>=1.0.9
ceph_alternative_lib =
    python-rados>=10.1.0 # not available on pypi
file =
    lz4>=0.9.0
    tooz>=1.38
doc =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-httpdomain
    PyYAML
    Jinja2
    reno>=1.6.2
test =
    pifpaf>=1.0.1
    gabbi>=1.30.0
    coverage>=3.6
    fixtures
    mock
    oslotest
    python-subunit>=0.0.18
    os-testr
    testrepository
    testscenarios
    testresources>=0.2.4 # Apache-2.0/BSD
    testtools>=0.9.38
    WebTest>=2.0.16
    doc8
    tooz>=1.38
    keystonemiddleware>=4.0.0
    wsgi_intercept>=1.4.1
test-swift =
    python-swiftclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_py]
pre-hook.build_config = gnocchi.genconfig.prehook

[files]
packages =
    gnocchi

[entry_points]
gnocchi.indexer.sqlalchemy.resource_type_attribute =
    string = gnocchi.indexer.sqlalchemy_extension:StringSchema
    uuid = gnocchi.indexer.sqlalchemy_extension:UUIDSchema
    number = gnocchi.indexer.sqlalchemy_extension:NumberSchema
    bool = gnocchi.indexer.sqlalchemy_extension:BoolSchema

gnocchi.storage =
    swift = gnocchi.storage.swift:SwiftStorage
    ceph = gnocchi.storage.ceph:CephStorage
    file = gnocchi.storage.file:FileStorage
    s3 = gnocchi.storage.s3:S3Storage
    redis = gnocchi.storage.redis:RedisStorage

gnocchi.incoming =
    ceph = gnocchi.storage.incoming.ceph:CephStorage
    file = gnocchi.storage.incoming.file:FileStorage
    swift = gnocchi.storage.incoming.swift:SwiftStorage
    s3 = gnocchi.storage.incoming.s3:S3Storage
    redis = gnocchi.storage.incoming.redis:RedisStorage

gnocchi.indexer =
    mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
    mysql+pymysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
    postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer

gnocchi.aggregates =
    moving-average = gnocchi.aggregates.moving_stats:MovingAverage

gnocchi.rest.auth_helper =
    noauth = gnocchi.rest.auth_helper:NoAuthHelper
    keystone = gnocchi.rest.auth_helper:KeystoneAuthHelper
    basic = gnocchi.rest.auth_helper:BasicAuthHelper

console_scripts =
    gnocchi-config-generator = gnocchi.cli:config_generator
    gnocchi-upgrade = gnocchi.cli:upgrade
    gnocchi-change-sack-size = gnocchi.cli:change_sack_size
    gnocchi-statsd = gnocchi.cli:statsd
    gnocchi-metricd = gnocchi.cli:metricd

wsgi_scripts =
    gnocchi-api = gnocchi.rest.app:build_wsgi_app

oslo.config.opts =
    gnocchi = gnocchi.opts:list_opts

oslo.config.opts.defaults =
    gnocchi = gnocchi.opts:set_defaults

tempest.test_plugins =
    gnocchi_tests = gnocchi.tempest.plugin:GnocchiTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
