[metadata]
name = gnocchi
url = http://gnocchi.osci.io
description = Metric as a Service
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Gnocchi developers
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[options]
packages =
    gnocchi

include_package_data = true

install_requires =
    numpy>=1.9.0
    iso8601
    oslo.config>=3.22.0
    oslo.policy>=0.3.0
    oslo.middleware>=3.22.0
    pytimeparse
    pecan>=0.9
    futures; python_version < '3'
    jsonpatch
    cotyledon>=1.5.0
    six
    stevedore
    ujson
    voluptuous>=0.8.10
    werkzeug
    trollius; python_version < '3.4'
    tenacity>=4.6.0,<7.0.0
    WebOb>=1.4.1
    Paste
    PasteDeploy
    monotonic
    daiquiri
    pyparsing>=2.2.0
    lz4>=0.9.0
    tooz>=1.38
    cachetools

[options.extras_require]
keystone =
    keystonemiddleware>=4.0.0,!=4.19.0
mysql =
    pymysql
    oslo.db>=4.29.0
    sqlalchemy<1.4.0
    sqlalchemy-utils
    alembic>=0.7.6,!=0.8.1,!=0.9.0
postgresql =
    psycopg2
    oslo.db>=4.29.0
    sqlalchemy<1.4.0
    sqlalchemy-utils
    alembic>=0.7.6,!=0.8.1,!=0.9.0
s3 =
    boto3
    botocore>=1.5
redis =
    redis >= 3.2.0 # MIT
    hiredis
swift =
    python-swiftclient>=3.1.0
ceph =
    # No deps - need rados dist package
ceph_alternative =
    python-rados>=12.2.0 # not available on pypi
prometheus =
    python-snappy
    protobuf
amqp1:
    python-qpid-proton>=0.17.0
doc =
    chardet<4
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-httpdomain
    PyYAML
    Jinja2
    reno>=1.6.2
test =
    pifpaf[ceph,gnocchi]>=1.0.1
    gabbi>=1.37.0
    coverage>=3.6
    fixtures
    mock
    python-subunit>=0.0.18
    os-testr
    testrepository
    testscenarios
    testresources>=0.2.4 # Apache-2.0/BSD
    testtools>=0.9.38
    WebTest>=2.0.16
    keystonemiddleware>=4.0.0,!=4.19.0
    wsgi_intercept>=1.4.1
    xattr!=0.9.4  # https://github.com/gnocchixyz/gnocchi/issues/951
test-swift =
    python-swiftclient

[options.entry_points]
gnocchi.indexer.sqlalchemy.resource_type_attribute =
    string = gnocchi.indexer.sqlalchemy_extension:StringSchema
    uuid = gnocchi.indexer.sqlalchemy_extension:UUIDSchema
    number = gnocchi.indexer.sqlalchemy_extension:NumberSchema
    bool = gnocchi.indexer.sqlalchemy_extension:BoolSchema
    datetime = gnocchi.indexer.sqlalchemy_extension:DatetimeSchema

gnocchi.storage =
    swift = gnocchi.storage.swift:SwiftStorage
    ceph = gnocchi.storage.ceph:CephStorage
    file = gnocchi.storage.file:FileStorage
    s3 = gnocchi.storage.s3:S3Storage
    redis = gnocchi.storage.redis:RedisStorage

gnocchi.incoming =
    ceph = gnocchi.incoming.ceph:CephStorage
    file = gnocchi.incoming.file:FileStorage
    swift = gnocchi.incoming.swift:SwiftStorage
    s3 = gnocchi.incoming.s3:S3Storage
    redis = gnocchi.incoming.redis:RedisStorage

gnocchi.indexer =
    mysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
    mysql+pymysql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
    postgresql = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer
    postgresql+psycopg2 = gnocchi.indexer.sqlalchemy:SQLAlchemyIndexer

gnocchi.rest.auth_helper =
    keystone = gnocchi.rest.auth_helper:KeystoneAuthHelper
    basic = gnocchi.rest.auth_helper:BasicAuthHelper
    remoteuser = gnocchi.rest.auth_helper:RemoteUserAuthHelper

console_scripts =
    gnocchi-config-generator = gnocchi.cli.manage:config_generator
    gnocchi-upgrade = gnocchi.cli.manage:upgrade
    gnocchi-change-sack-size = gnocchi.cli.manage:change_sack_size
    gnocchi-statsd = gnocchi.cli.statsd:statsd
    gnocchi-amqpd = gnocchi.cli.amqpd:amqpd
    gnocchi-metricd = gnocchi.cli.metricd:metricd
    gnocchi-injector = gnocchi.cli.injector:injector

oslo.config.opts =
    gnocchi = gnocchi.opts:list_opts

oslo.config.opts.defaults =
    gnocchi = gnocchi.opts:set_defaults

oslo.policy.policies =
    gnocchi = gnocchi.rest.policies:list_rules

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_wheel]
universal=1
